# ApproxMVBB

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  VERSION  _config.yml  clang-formatAll.sh  index.html  index.md  params.json  replace.sh
.githooks/pre-commit/: update-version
.github/: FUNDING.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: main_mvbbBenchmarks.cpp
cmake/: AddGTestExternalProject.cmake  CheckFloatPrecision.cmake  DefineApproxMVBBExternalSources.cmake  DefineApproxMVBBSources.cmake  DefineVersion.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindApproxMVBBSource.cmake  FindApproxMVBBSources.cmake  FindEigen3.cmake  FindMeta.cmake  FindPugiXML.cmake  FirstCMakeRun.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescriptionExtern.cmake  IncludeInstallFolderPostfix.cmake  InstallScript.cmake  SetTargetCompileOptions.cmake  WriteConfigFile.cmake  parallelmake.sh
example/: CMakeLists.txt
example/approxMVBB/: CMakeLists.txt
example/approxMVBB/src/: main.cpp
example/include/: ComputeMVBBTests.hpp
example/kdTreeFiltering/: CMakeLists.txt
example/kdTreeFiltering/python/: VisualizeKdTree.ipynb
example/kdTreeFiltering/python/Tools/Parsers/: AABB.py  GridXMLParser.py  KdTreeXMLParser.py  ParseNDArray.py  __init__.py
example/kdTreeFiltering/python/Tools/Transformations/: Transformations.py  __init__.py
example/kdTreeFiltering/src/: main.cpp
example/libraryUsage/: CMakeLists.txt  main.cpp
example/src/: main.cpp
include/ApproxMVBB/: .clang-format  AABB.hpp  AngleFunctions.hpp  ComputeApproxMVBB.hpp  ContainerFunctions.hpp  ConvexHull2D.hpp  GreatestCommonDivisor.hpp  KdTree.hpp  KdTreeXml.hpp  MakeCoordinateSystem.hpp  MinAreaRectangle.hpp  OOBB.hpp  PointFunctions.hpp  ProjectedPointSet.hpp  RandomGenerators.hpp  TypeDefsPoints.hpp
include/ApproxMVBB/Common/: AssertionDebug.hpp  CPUTimer.hpp  ContainerTag.hpp  CygwinPatch.hpp  Exception.hpp  FloatingPointComparision.hpp  LogDefines.hpp  MyContainerTypeDefs.hpp  MyMatrixDefs.hpp  MyMatrixTypeDefs.hpp  Platform.hpp  SfinaeMacros.hpp  StaticAssert.hpp  TypeDefs.hpp  TypeDefsPoints.hpp
include/ApproxMVBB/Config/: Config.hpp.in.cmake
lib/: ApproxMVBB-config-version.cmake.in  ApproxMVBB-config.cmake.in  CMakeLists.txt  approxmvbb-config-version.cmake.in  approxmvbb-config.cmake.in
lib/cmake/: approxmvbb-config-dependencies.cmake
src/ApproxMVBB/: AABB.cpp  ConvexHull2D.cpp  MinAreaRectangle.cpp  OOBB.cpp  ProjectedPointSet.cpp  RandomGenerators.cpp
src/ApproxMVBB/Common/: MyMatrixDefs.cpp  MyMatrixTypeDefs.cpp
tests/: CMakeLists.txt
tests/files/: Bunny.txt  PointCloud_0.txt  PointCloud_1.txt  PointCloud_10.txt  PointCloud_11.txt  PointCloud_12.txt  PointCloud_13.txt  PointCloud_14.txt  PointCloud_15.txt  PointCloud_16.txt  PointCloud_17.txt  PointCloud_18.txt  PointCloud_19.txt  PointCloud_2.txt  PointCloud_20.txt  PointCloud_21.txt  PointCloud_22.txt  PointCloud_23.txt  PointCloud_24.txt  PointCloud_25.txt  PointCloud_26.txt  PointCloud_27.txt  PointCloud_28.txt  PointCloud_29.txt  PointCloud_3.txt  PointCloud_30.txt  PointCloud_31.txt  PointCloud_32.txt  PointCloud_33.txt  PointCloud_34.txt  PointCloud_35.txt  PointCloud_36.txt  PointCloud_37.txt  PointCloud_38.txt  PointCloud_39.txt  PointCloud_4.txt  PointCloud_40.txt  PointCloud_41.txt  PointCloud_42.txt  PointCloud_43.txt  (+16 more)
tests/files/validation/double/: DiameterOOBBTest-Bunny-double-Out.txt  DiameterOOBBTest-Lucy-double-Out.txt  DiameterOOBBTest-Plane-double-Out.txt  DiameterOOBBTest-PointClouds-Nr0-double-Out.txt  DiameterOOBBTest-PointClouds-Nr1-double-Out.txt  DiameterOOBBTest-PointClouds-Nr10-double-Out.txt  DiameterOOBBTest-PointClouds-Nr11-double-Out.txt  DiameterOOBBTest-PointClouds-Nr12-double-Out.txt  DiameterOOBBTest-PointClouds-Nr13-double-Out.txt  DiameterOOBBTest-PointClouds-Nr14-double-Out.txt  DiameterOOBBTest-PointClouds-Nr15-double-Out.txt  DiameterOOBBTest-PointClouds-Nr16-double-Out.txt  DiameterOOBBTest-PointClouds-Nr17-double-Out.txt  DiameterOOBBTest-PointClouds-Nr18-double-Out.txt  DiameterOOBBTest-PointClouds-Nr19-double-Out.txt  DiameterOOBBTest-PointClouds-Nr2-double-Out.txt  DiameterOOBBTest-PointClouds-Nr20-double-Out.txt  DiameterOOBBTest-PointClouds-Nr21-double-Out.txt  DiameterOOBBTest-PointClouds-Nr22-double-Out.txt  DiameterOOBBTest-PointClouds-Nr23-double-Out.txt  DiameterOOBBTest-PointClouds-Nr24-double-Out.txt  DiameterOOBBTest-PointClouds-Nr25-double-Out.txt  DiameterOOBBTest-PointClouds-Nr26-double-Out.txt  DiameterOOBBTest-PointClouds-Nr27-double-Out.txt  DiameterOOBBTest-PointClouds-Nr28-double-Out.txt  DiameterOOBBTest-PointClouds-Nr29-double-Out.txt  DiameterOOBBTest-PointClouds-Nr3-double-Out.txt  DiameterOOBBTest-PointClouds-Nr30-double-Out.txt  DiameterOOBBTest-PointClouds-Nr31-double-Out.txt  DiameterOOBBTest-PointClouds-Nr32-double-Out.txt  DiameterOOBBTest-PointClouds-Nr33-double-Out.txt  DiameterOOBBTest-PointClouds-Nr34-double-Out.txt  DiameterOOBBTest-PointClouds-Nr35-double-Out.txt  DiameterOOBBTest-PointClouds-Nr36-double-Out.txt  DiameterOOBBTest-PointClouds-Nr37-double-Out.txt  DiameterOOBBTest-PointClouds-Nr38-double-Out.txt  DiameterOOBBTest-PointClouds-Nr39-double-Out.txt  DiameterOOBBTest-PointClouds-Nr4-double-Out.txt  DiameterOOBBTest-PointClouds-Nr40-double-Out.txt  DiameterOOBBTest-PointClouds-Nr41-double-Out.txt  (+153 more)
tests/include/: CPUTimer.hpp  CommonFunctions.hpp  ComputeApproxMVBBTests.hpp  TestConfig.hpp.in.cmake  TestFunctions.hpp
tests/python/: PlotTestResults.ipynb
tests/src/: CommonFunctions.cpp  TestFunctions.cpp  main.cpp  main_convexHullTests.cpp  main_diameterOOBBTests.cpp  main_diameterTests.cpp  main_minAreaRectangleTests.cpp  main_mvbbTests.cpp
travis/: build.sh  general.sh  install_dep.sh  install_linux.sh  install_osx.sh
